[gd_scene load_steps=22 format=3 uid="uid://youox4cuc70m"]

[ext_resource type="Script" path="res://Scripts/DynamicCatOptionButton.gd" id="1_begdr"]
[ext_resource type="Texture2D" uid="uid://nklyurq55nh5" path="res://images/Accept.png" id="1_kewe1"]
[ext_resource type="Texture2D" uid="uid://dkxkg1in1cdqo" path="res://images/White_Cat.png" id="1_rqi7e"]
[ext_resource type="Theme" uid="uid://bw0mhj7o0bkbv" path="res://main.theme" id="1_xrlf3"]
[ext_resource type="Texture2D" uid="uid://dea2uqbo2r8sc" path="res://images/TailTrinket_cut.tres" id="2_7kade"]
[ext_resource type="Texture2D" uid="uid://cl0nnalqxhy2y" path="res://images/Crown.png" id="3_jjteo"]
[ext_resource type="Texture2D" uid="uid://dblmkwcdpwt78" path="res://images/Crown_cut.tres" id="3_xhilw"]
[ext_resource type="Texture2D" uid="uid://cpoxmt63ikby4" path="res://images/Earrings_cut.tres" id="4_qwp5y"]
[ext_resource type="Texture2D" uid="uid://dj8a234n4odeu" path="res://images/Earrings.png" id="4_t31fm"]
[ext_resource type="Texture2D" uid="uid://c30jskuoje3us" path="res://images/Glasses.png" id="5_ejovx"]
[ext_resource type="Texture2D" uid="uid://bkvumkjje3rtb" path="res://images/Glasses_cut.tres" id="5_o2yrr"]
[ext_resource type="Script" path="res://Scripts/AccessoriesController.gd" id="6_5lmvo"]
[ext_resource type="Texture2D" uid="uid://drh8hcqeqvwjy" path="res://images/TailTrinket.png" id="6_bm52k"]
[ext_resource type="Texture2D" uid="uid://gee1oc07armi" path="res://images/Blue_Eyes.png" id="8_miwhf"]
[ext_resource type="PackedScene" uid="uid://dpprlvlqvbstu" path="res://Screens/StatManager.tscn" id="15_wb3je"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6frc3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yyqdy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vwitq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e1v3q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ygyjf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2073e"]

[node name="Character creation" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_xrlf3")

[node name="StatManager" parent="." instance=ExtResource("15_wb3je")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="left" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Character Select Title" type="Label" parent="VBoxContainer/HBoxContainer/left"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 42
text = "Create Your Character"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/left"]
layout_mode = 2
size_flags_vertical = 6

[node name="Apperance" type="Label" parent="VBoxContainer/HBoxContainer/left/PanelContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Apperance
"
horizontal_alignment = 1

[node name="Apperance_table" type="GridContainer" parent="VBoxContainer/HBoxContainer/left"]
layout_mode = 2
columns = 3

[node name="Class" type="Label" parent="VBoxContainer/HBoxContainer/left/Apperance_table"]
layout_mode = 2
size_flags_vertical = 6
text = "Class"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/left/Apperance_table"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DynamicCatOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/left/Apperance_table"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Warrior"
popup/item_0/id = 0
popup/item_1/text = "Knight"
popup/item_1/id = 1
popup/item_2/text = "Wanderer"
popup/item_2/id = 2
script = ExtResource("1_begdr")
stat_name = "class"

[node name="Color" type="Label" parent="VBoxContainer/HBoxContainer/left/Apperance_table"]
layout_mode = 2
size_flags_vertical = 6
text = "Color"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/left/Apperance_table"]
layout_mode = 2

[node name="DynamicCatOptionButton2" type="OptionButton" parent="VBoxContainer/HBoxContainer/left/Apperance_table"]
layout_mode = 2
item_count = 4
selected = 2
popup/item_0/text = "Grey"
popup/item_0/id = 0
popup/item_1/text = "Black"
popup/item_1/id = 1
popup/item_2/text = "White"
popup/item_2/id = 2
popup/item_3/text = "Brown"
popup/item_3/id = 3
script = ExtResource("1_begdr")
stat_name = "color"

[node name="Eyes_Color" type="Label" parent="VBoxContainer/HBoxContainer/left/Apperance_table"]
layout_mode = 2
size_flags_vertical = 6
text = "Eyes color"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/left/Apperance_table"]
layout_mode = 2

[node name="DynamicCatOptionButton3" type="OptionButton" parent="VBoxContainer/HBoxContainer/left/Apperance_table"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Blue"
popup/item_0/id = 0
popup/item_1/text = "Purple"
popup/item_1/id = 1
popup/item_2/text = "Green"
popup/item_2/id = 2
popup/item_3/text = "Red"
popup/item_3/id = 3
script = ExtResource("1_begdr")
stat_name = "color_eyes"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/left"]
layout_mode = 2
size_flags_vertical = 6

[node name="Stats" type="Label" parent="VBoxContainer/HBoxContainer/left/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "Stats
"
horizontal_alignment = 1

[node name="Stats_table" type="GridContainer" parent="VBoxContainer/HBoxContainer/left"]
layout_mode = 2
columns = 3

[node name="Health" type="Label" parent="VBoxContainer/HBoxContainer/left/Stats_table"]
layout_mode = 2
size_flags_vertical = 6
text = "Health"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/left/Stats_table"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DynamicCatOptionButton4" type="OptionButton" parent="VBoxContainer/HBoxContainer/left/Stats_table"]
layout_mode = 2
item_count = 10
selected = 1
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 5
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "10"
popup/item_9/id = 9
script = ExtResource("1_begdr")
stat_name = "health"

[node name="Agility" type="Label" parent="VBoxContainer/HBoxContainer/left/Stats_table"]
layout_mode = 2
size_flags_vertical = 6
text = "Agility"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/left/Stats_table"]
layout_mode = 2

[node name="DynamicCatOptionButton5" type="OptionButton" parent="VBoxContainer/HBoxContainer/left/Stats_table"]
layout_mode = 2
item_count = 10
selected = 1
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 5
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "10"
popup/item_9/id = 9
script = ExtResource("1_begdr")
stat_name = "agility"

[node name="Magic" type="Label" parent="VBoxContainer/HBoxContainer/left/Stats_table"]
layout_mode = 2
size_flags_vertical = 6
text = "Magic"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/left/Stats_table"]
layout_mode = 2

[node name="DynamicCatOptionButton3" type="OptionButton" parent="VBoxContainer/HBoxContainer/left/Stats_table"]
layout_mode = 2
item_count = 10
selected = 1
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 5
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "10"
popup/item_9/id = 9
script = ExtResource("1_begdr")
stat_name = "magic"

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/HBoxContainer/left"]
layout_mode = 2
size_flags_vertical = 6

[node name="Items" type="Label" parent="VBoxContainer/HBoxContainer/left/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 6
text = "Items"
horizontal_alignment = 1

[node name="Accessories" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/left"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="Earrings" type="TextureButton" parent="VBoxContainer/HBoxContainer/left/Accessories"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("4_qwp5y")
ignore_texture_size = true
stretch_mode = 5

[node name="Glasses" type="TextureButton" parent="VBoxContainer/HBoxContainer/left/Accessories"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("5_o2yrr")
ignore_texture_size = true
stretch_mode = 5

[node name="TailTrinket" type="TextureButton" parent="VBoxContainer/HBoxContainer/left/Accessories"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("2_7kade")
ignore_texture_size = true
stretch_mode = 5

[node name="Crown" type="TextureButton" parent="VBoxContainer/HBoxContainer/left/Accessories"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("3_xhilw")
ignore_texture_size = true
stretch_mode = 5

[node name="right" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 2

[node name="Container" type="PanelContainer" parent="VBoxContainer/HBoxContainer/right"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_6frc3")
script = ExtResource("6_5lmvo")

[node name="TailTrinket" type="TextureRect" parent="VBoxContainer/HBoxContainer/right/Container"]
visible = false
z_index = 1
layout_mode = 2
texture = ExtResource("6_bm52k")
expand_mode = 4

[node name="Crown" type="TextureRect" parent="VBoxContainer/HBoxContainer/right/Container"]
visible = false
z_index = 1
layout_mode = 2
texture = ExtResource("3_jjteo")
expand_mode = 4

[node name="Earrings" type="TextureRect" parent="VBoxContainer/HBoxContainer/right/Container"]
visible = false
z_index = 1
layout_mode = 2
texture = ExtResource("4_t31fm")
expand_mode = 4

[node name="Glasses" type="TextureRect" parent="VBoxContainer/HBoxContainer/right/Container"]
visible = false
z_index = 1
layout_mode = 2
texture = ExtResource("5_ejovx")
expand_mode = 4

[node name="Cat" type="TextureRect" parent="VBoxContainer/HBoxContainer/right/Container"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_rqi7e")
expand_mode = 4

[node name="Eyes" type="TextureRect" parent="VBoxContainer/HBoxContainer/right/Container"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_miwhf")
expand_mode = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/right"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.835294)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0.576471)
theme_override_styles/normal = SubResource("StyleBoxEmpty_yyqdy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vwitq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e1v3q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ygyjf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2073e")
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/right/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kewe1")
expand_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/left/Accessories/Earrings" to="VBoxContainer/HBoxContainer/right/Container" method="_on_earrings_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/left/Accessories/Glasses" to="VBoxContainer/HBoxContainer/right/Container" method="_on_glasses_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/left/Accessories/TailTrinket" to="VBoxContainer/HBoxContainer/right/Container" method="_on_tail_trinket_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/left/Accessories/Crown" to="VBoxContainer/HBoxContainer/right/Container" method="_on_crown_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/right/Button" to="StatManager" method="_on_button_pressed"]
